<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/global_margin">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_reviewer"
        android:layout_width="36dp"
        android:layout_height="36dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_reviewer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sk_modernist"
        android:paddingStart="@dimen/review_title_padding_start"
        android:text="@string/reviewer_name"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@id/image_reviewer"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date_reviewer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sk_modernist"
        android:paddingStart="@dimen/review_title_padding_start"
        android:text="@string/reviewer_date"
        android:textColor="@color/color_review_date"
        app:layout_constraintLeft_toRightOf="@id/image_reviewer"
        app:layout_constraintTop_toBottomOf="@id/name_reviewer" />

    <TextView
        android:id="@+id/review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sk_modernist"
        android:paddingTop="@dimen/review_comment_padding_top"
        android:text="@string/review"
        android:textColor="@color/color_review"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/date_reviewer" />
</androidx.constraintlayout.widget.ConstraintLayout>